--- a/perma_web/perma/templates/base-responsive.html
+++ b/perma_web/perma/templates/base-responsive.html
@@ -1,7 +1,8 @@
 {% load render_bundle from webpack_loader %}<!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Perma.cc{% block title %}{% endblock %}</title>
+    <title>Permabib{% block title %}{% endblock %}</title>
+    <meta name="robots" content="noindex">
 
     <!-- currently 'edge' or nothing seems to be the best IE mode for modern sites -- see http://stackoverflow.com/a/8942455 -->
     <meta http-equiv="x-ua-compatible" content="IE=edge">
